# cygnus

./: Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
assets/: build-runner.js  build-runner.test.js  build.bunfig.toml  cygnus-static-server.ts  shim.js
console/: admin-client.js  admin-client.test.js  index.html  package.json  server.js  server.test.js  vite.config.js
console/src/: App.svelte  app.css
console/src/lib/: api.js  data.js  events.js  fixtures.js  fmt.js  identicon.js  live.svelte.js  stores.svelte.js  tar.js  time.js
console/src/lib/components/: Anatomy.svelte  Bars.svelte  Chart.svelte  Constellation.svelte  Icon.svelte  Identicon.svelte  Nav.svelte  Palette.svelte  ShipModal.svelte  Spark.svelte  SwanMark.svelte  Terminal.svelte  TopBar.svelte
console/src/lib/screens/: AppDetail.svelte  DeployDetail.svelte  Deploys.svelte  LiveConsole.svelte  Login.svelte  NodeScreen.svelte  Observe.svelte  Overview.svelte  SettingsScreen.svelte  Setup.svelte
crates/cygnus-cage/: Cargo.toml
crates/cygnus-cage/src/: dns.rs  error.rs  jobs.rs  lib.rs  linux.rs  mount.rs  net.rs  process.rs  seccomp.rs  spec.rs
crates/cygnus-cage/tests/: boot.rs  seccomp.rs
crates/cygnus-daemon/: Cargo.toml
crates/cygnus-daemon/src/: acme.rs  deploy.rs  domains.rs  edge.rs  github.rs  ingress.rs  lib.rs  main.rs  metrics.rs  relay_framing.rs  runtime_logs.rs  state.rs  tls.rs
crates/cygnus-daemon/src/admin/: client.rs  handler.rs  mod.rs  protocol.rs  server.rs
crates/cygnus-daemon/src/deploy/: publish.rs  upload.rs
crates/cygnus-init/: Cargo.toml
crates/cygnus-init/src/: main.rs
crates/cygnus-proxy/: Cargo.toml
crates/cygnus-proxy/src/: lib.rs  portable.rs  relay.rs
crates/cygnus-proxy/tests/: relay.rs
crates/cygnus-router/: Cargo.toml
crates/cygnus-router/src/: http.rs  lib.rs  route.rs
crates/cygnus-supervisor/: Cargo.toml
crates/cygnus-supervisor/src/: lib.rs  runtime.rs
docs/: getting-started.md  spec.md
scripts/: build-release-test.sh  build-release.sh  install-test.sh
tests/: build-runner.test.js  shim.test.js  static-server.test.js
tmp/: commit-msg.txt
