[package]
name = "cygnus-cage"
description = "Per-app isolation stack: namespaces, cgroups v2, mounts, seccomp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nix = { version = "0.30.1", features = ["fs", "process", "sched", "signal"] }
thiserror = "2.0.12"
