[package]
name = "cygnus-cage"
description = "Per-app isolation stack: namespaces, cgroups v2, mounts, seccomp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nix = { version = "0.30.1", features = ["fs", "process", "sched", "signal", "user"] }
thiserror = "2.0.12"

[target.'cfg(target_os = "linux")'.dependencies]
hickory-proto = { version = "=0.26.1", default-features = false }
parking_lot = "0.12.5"
seccompiler = "0.5.0"
