[package]
name = "cygnus-daemon"
description = "Cygnus front: accept HTTP/1.1, route by host, ensure the cage is up, relay to its socket"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
libc = "0.2"
cygnus-cage = { path = "../cygnus-cage" }
cygnus-router = { path = "../cygnus-router" }
cygnus-supervisor = { path = "../cygnus-supervisor" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10"
thiserror = "2.0"
