[package]
name = "cygnus-daemon"
description = "Cygnus front: accept HTTP/1.1, route by host, ensure the cage is up, relay to its socket"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
arc-swap = "1.8.2"
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = "0.10.1"
getrandom = "0.3.3"
flate2 = "1.1.5"
hmac = "0.12.1"
hex = "0.4.3"
jsonwebtoken = "9.3.1"
tar = "0.4.44"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
indicatif = "0.17"
libc = "0.2"
cygnus-cage = { path = "../cygnus-cage" }
cygnus-router = { path = "../cygnus-router" }
cygnus-supervisor = { path = "../cygnus-supervisor" }
owo-colors = "4"
parking_lot = "0.12.5"
rcgen = "0.14.8"
time = "0.3.44"
instant-acme = { version = "0.8.5", default-features = false, features = ["hyper-rustls", "rcgen", "ring"] }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
rustls = { version = "0.23.42", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2.0"
serde_json = "1.0.150"
sha2 = "0.10"
signal-hook = "0.4.3"
tokio = { version = "1.49", features = ["net", "rt", "time"] }
x509-parser = "0.18.1"
ureq = { version = "3.1.4", default-features = false, features = ["json", "rustls"] }
thiserror = "2.0"

[[bin]]
name = "cygnus"
path = "src/bin/cygnus.rs"
