[package]
name = "cygnus-proxy"
description = "Data path between client TCP connections and per-app Unix domain sockets"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.7"
libc = "0.2"
